--- a/UI/react-ts/package.json
+++ b/UI/react-ts/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
@@ -22,4 +26,3 @@
     "vite": "^2.9.7"
   }
 }
-
