--- a/UI/react-ts/package.json
+++ b/UI/react-ts/package.json
@@ -4,25 +4,27 @@
   "description": "React app for my brand",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next  start",
+    "lint":"next lint"
   },
   "dependencies": {
+    "next": "latest",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-markdown": "^8.0.3",
-    "react-router-dom": "^6.3.0",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "sass": "^1.54.8"
   },
   "devDependencies": {
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.7"
+    "typescript": "^4.6.3"
   }
 }
