--- a/UI/next-ts/package.json
+++ b/UI/next-ts/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next  start",
-    "lint":"next lint"
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "latest",
@@ -20,11 +20,13 @@
     "sass": "^1.54.8"
   },
   "devDependencies": {
-    "@types/node": "^18.7.14",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
     "tailwindcss": "^3.0.24",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   }
 }
