--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "autoprefixer": "^10.4.16",
+    "daisyui": "latest",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
-    "tailwindcss": "^3.0.24",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.9.4"
   }
 }
