--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.14.5",
     "next": "13.x",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -17,7 +18,8 @@
     "react-markdown": "^8.0.3",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^3.0.1",
-    "sass": "^1.54.8"
+    "sass": "^1.54.8",
+    "three": "^0.157.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
