--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-three/fiber": "^8.14.5",
+    "devicon": "^2.16.0",
     "next": "13.x",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
